clusters/cluster.boem/infra/traefik/ingresses/as216455.net/as216455.net.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: as216455.net
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`as216455.net`)
      services:
        - kind: Service
          name: sting-as-site
          namespace: default
          port: 80
      middlewares:
        - name: hsts
          namespace: traefik

    - kind: Rule
      match: Host(`www.as216455.net`)
      services:
        - kind: Service
          name: sting-as-site
          namespace: default
          port: 80
      middlewares:
        - name: hsts
          namespace: traefik

    - kind: Rule
      match: Host(`tteesstt.as216455.net`)
      services:
        - kind: Service
          name: sting-as-site
          namespace: default
          port: 80
      middlewares:
        - name: authentik
          namespace: traefik

    # - kind: Rule
    #   match: Host(`rpki.as216455.net`)
    #   services:
    #     - kind: Service
    #       name: krill-http
    #       namespace: default
    #       port: 3000

    - kind: Rule
      match: Host(`dns.as216455.net`)
      services:
        - name: poweradmin
          namespace: default
          port: http

    - kind: Rule
      match: Host(`nms.as216455.net`)
      services:
        - name: librenms
          namespace: monitoring
          port: 8000

    - kind: Rule
      match: Host(`flux-webhook.as216455.net`)
      services:
        - name: webhook-receiver
          namespace: flux-system
          port: 80

    - kind: Rule
      match: Host(`tilesgl.as216455.net`)
      services:
        - name: tiles
          namespace: traefik
          port: 8080

    - kind: Rule
      match: Host(`tilespostserve.as216455.net`)
      services:
        - name: tiles
          namespace: traefik
          port: 8090

    - kind: Rule
      match: Host(`maputnik.as216455.net`)
      services:
        - name: tiles
          namespace: traefik
          port: 8088

    - kind: Rule
      match: Host(`actual-koen.as216455.net`)
      services:
        - name: actual-budget-koen-service
          namespace: default
          port: 5006

    - kind: Rule
      match: Host(`actual-wouter.as216455.net`)
      services:
        - name: actual-budget-wouter-service
          namespace: default
          port: 5006

    - kind: Rule
      match: Host(`auth.as216455.net`)
      services:
        - name: authentik-server
          namespace: authentik
          port: 80

    - kind: Rule
      match: Host(`login.as216455.net`)
      services:
        - name: kanidm
          namespace: kanidm
          port: 80
          scheme: https
          serversTransport: insecure

    - kind: Rule
      match: Host(`images.as216455.net`)
      services:
        - kind: Service
          name: harbor
          namespace: harbor
          port: 80

    - kind: Rule
      match: Host(`party.as216455.net`)
      services:
        - kind: Service
          name: copyparty
          namespace: default
          port: 80

    - kind: Rule
      match: Host(`autodiscover.as216455.net`) || Host(`autoconfig.as216455.net`) ||
        Host(`mta-sts.as216455.net`)
      services:
        - kind: Service
          name: stalwart
          namespace: stalwart
          port: mgmt

    - kind: Rule
      match: Host(`git.as216455.net`)
      services:
        - kind: Service
          name: forgejo-http 
          namespace: forgejo
          port: http
  tls:
    secretName: as216455.net-prod-tls
