clusters/cluster.boem/infra/traefik/ingresses/as216455.net/i.as216455.net.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: i.as216455.net
  namespace: traefik
spec:
  entryPoints:
    - internal
    - internalsecure
  routes:
    - kind: Rule
      match: Host(`pve.i.as216455.net`)
      services:
        - kind: Service
          name: pve
          scheme: https
          serversTransport: insecure
          namespace: traefik
          port: 8006

    - kind: Rule
      match: Host(`i.as216455.net`)
      services:
        - kind: Service
          name: pve
          scheme: https
          serversTransport: insecure
          namespace: traefik
          port: 8006
      middlewares:
        - name: pve-redirect
          namespace: traefik

    - kind: Rule
      match: Host(`alerts.i.as216455.net`)
      # middlewares:
      # - name: internal-whitelist
      services:
        - kind: Service
          name: alertmanager-operated
          namespace: monitoring
          passHostHeader: true
          port: 9093

    - kind: Rule
      match: Host(`alertmanager.i.as216455.net`)
      # middlewares:
      # - name: internal-whitelist
      services:
        - kind: Service
          name: alertmanager-operated
          namespace: monitoring
          passHostHeader: true
          port: 9093

    - kind: Rule
      match: Host(`traefik.i.as216455.net`)
      services:
        - name: traefik-api
          namespace: traefik
          port: 9000

    - kind: Rule
      match: Host(`prometheus.i.as216455.net`)
      services:
        - name: prometheus-operated
          namespace: monitoring
          port: http-web
    - kind: Rule
      match: Host(`dns.i.as216455.net`)
      services:
        - name: pdns-admin
          namespace: default
          port: 80

    - kind: Rule
      match: Host(`pgadmin.i.as216455.net`)
      services:
        - name: pgadmin4
          namespace: default
          port: 5050

    - kind: Rule
      match: Host(`netbox.i.as216455.net`)
      services:
        - name: netbox
          namespace: default
          port: http

    - kind: Rule
      match: Host(`oxidized.i.as216455.net`)
      services:
        - name: oxidized
          namespace: default
          port: 80

    - kind: Rule
      match: Host(`spoolman.i.as216455.net`)
      services:
        - name: spoolman
          namespace: default
          port: 8000

    - kind: Rule
      match: Host(`actual.i.as216455.net`)
      services:
        - name: actual-budget-service
          namespace: default
          port: 5006

    - kind: Rule
      match: Host(`actual-lucas.i.as216455.net`)
      services:
        - name: actual-budget-lucas-service
          namespace: default
          port: 5006

    - kind: Rule
      match: Host(`routinator.i.as216455.net`)
      services:
        - name: routinator-vm
          namespace: traefik
          port: 8323

    - kind: Rule
      match: Host(`krill.i.as216455.net`)
      services:
        - kind: Service
          name: krill-http
          namespace: default
          port: 3000

    - kind: Rule
      match: Host(`ollama.i.as216455.net`)
      services:
        - kind: Service
          name: ollama-service
          namespace: default
          port: http

    - kind: Rule
      match: Host(`s3.i.as216455.net`)
      services:
        - kind: Service
          name: ceph-rgw
          namespace: traefik
          port: 7480

    - kind: Rule
      match: Host(`litellm.i.as216455.net`)
      services:
        - kind: Service
          name: litellm
          namespace: litellm
          port: 4000

    - kind: Rule
      match: Host(`paperless.i.as216455.net`)
      services:
        - kind: Service
          name: paperless-ngx
          namespace: paperless-ngx
          port: http

    - kind: Rule
      match: Host(`grafana.i.as216455.net`)
      services:
        - name: monitoring-stack-grafana
          namespace: monitoring
          port: 80
          passHostHeader: true

  tls:
    secretName: i.as216455.net-prod-tls
